--- a/Aramis.Api.Web/Aramis.Api.Web.csproj
+++ b/Aramis.Api.Web/Aramis.Api.Web.csproj
@@ -12,10 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\Aramis.Api.Commons\Aramis.Api.Commons.csproj" />
     <ProjectReference Include="..\Aramis.Api.Repository\Aramis.Api.Repository.csproj" />
     <ProjectReference Include="..\Aramis.Api.SecurityService\Aramis.Api.SecurityService.csproj" />
   </ItemGroup>
