--- a/Aramis.Api.SecurityService/Aramis.Api.SecurityService.csproj
+++ b/Aramis.Api.SecurityService/Aramis.Api.SecurityService.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="6.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Aramis.Api.Commons\Aramis.Api.Commons.csproj" />
     <ProjectReference Include="..\Aramis.Api.Repository\Aramis.Api.Repository.csproj" />
   </ItemGroup>
 
