--- a/Aramis.Api.Web/Aramis.Api.Web.csproj
+++ b/Aramis.Api.Web/Aramis.Api.Web.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Aramis.Api.Commons\Aramis.Api.Commons.csproj" />
+    <ProjectReference Include="..\Aramis.Api.CustomersService\Aramis.Api.CustomersService.csproj" />
     <ProjectReference Include="..\Aramis.Api.SecurityService\Aramis.Api.SecurityService.csproj" />
   </ItemGroup>
 
