--- a/Aramis.Api.Repository/Aramis.Api.Repository.csproj
+++ b/Aramis.Api.Repository/Aramis.Api.Repository.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Interfaces\Recibos\" />
     <Folder Include="Models\" />
   </ItemGroup>
 
