--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/Aramis.Api.FiscalService/Certificados
+/Aramis.Api.Web/wwwroot/Certificados
+/Aramis.Api.Web/Certificados
