--- a/Aramis.Api.Web/Kubernetes/app-ingress.yml
+++ b/Aramis.Api.Web/Kubernetes/app-ingress.yml
@@ -8,7 +8,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: <Host>
+  - host: aramis.35.188.20.15.nip.io
     http:
       paths:
       - pathType: Prefix
