--- a/Aramis.Api.Web/Kubernetes/app-ingress.yml
+++ b/Aramis.Api.Web/Kubernetes/app-ingress.yml
@@ -15,6 +15,6 @@ spec:
         path: /
         backend:
           service:
-            name: appback-service
+            name: app-service
             port: 
               number: 80
