--- a/Aramis.Api.Web/appsettings.json
+++ b/Aramis.Api.Web/appsettings.json
@@ -3,8 +3,8 @@
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
   },
   "ConnectionStrings": {
-   //"DefaultConnection": "Server=localhost\\SERVER;Initial Catalog=AramisBD; User Id=kndRicardo;password=Aramis1234;Encrypt=False;MultipleActiveResultSets=true",
-    "DefaultConnection": "Server=DockerLocal;Initial Catalog=AramisBD; User Id=sa;password=Aramis1234@;Encrypt=False"
+    "DefaultConnection": "Server=localhost\\SERVER;Initial Catalog=AramisBD; User Id=kndRicardo;password=Aramis1234;Encrypt=False;MultipleActiveResultSets=true",
+    "ConnAramis": "Server=DockerLocal;Initial Catalog=AramisBD; User Id=sa;password=Aramis1234@;Encrypt=False"
   },
   "Logging": {
     "LogLevel": {
